--- a/code-assignment/code-assignment3/index.html
+++ b/code-assignment/code-assignment3/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src/index.js">
   </head>
   <body>
     <h1>Time Until Christmas</h1>
