--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
         <input type="text" placeholder="what is your name?"/>
     </form>
     <h4 class="js-greetings css-greetings"></h4>
+    
+    <form action="" class="js-toDoForm">
+        <input type="text" placeholder="Write a to do">
+    </form>
+    <ul class="js-toDoList">
 
+    </ul>
+    <span class="js-weather"></span>
+    
     <script src="js/clock.js"></script>
     <script src="js/gretting.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/bg.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
